--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 build/
 
 .flutter-plugins
+/android/.project
+/android/.settings/org.eclipse.buildship.core.prefs
+/android/app/.classpath
+/android/app/.project
+/android/app/.settings/org.eclipse.buildship.core.prefs
+/ios/Flutter/flutter_export_environment.sh
+/ios/Runner.xcodeproj/project.pbxproj
+/pubspec.lock
